--- a/package.xml
+++ b/package.xml
@@ -23,6 +23,7 @@
   <run_depend>rosgraph_msgs</run_depend>
   <run_depend>std_srvs</run_depend> 
   <run_depend>rtt_std_srvs</run_depend> 
+  <run_depend>rtt_barrett_hand_controller</run_depend>
   <run_depend>rtt_barrett_hand_controller_srvs</run_depend>
 
 </package>
